update pages and erb forms

--- a/views/index.erb
+++ b/views/index.erb
@@ -19,8 +19,11 @@
     <% end %>
   </select>
 
+  <label for="due_date">Enter Due Date:</label>
+  <input type="date" name="due_date" required>
+
   <label for="description">Description of the task:</label>
-  <input id="description" name="description" type="text">
+  <input id="description" name="description" type="text" required>
 
   <button type="submit">Add task</button>
 </form>
