--- a/views/index.erb
+++ b/views/index.erb
@@ -20,10 +20,10 @@
   </select>
 
   <label for="due_date">Enter Due Date:</label>
-  <input type="date" name="due_date" required>
+  <input type="date" name="due_date">
 
   <label for="description">Description of the task:</label>
-  <input id="description" name="description" type="text" required>
+  <input id="description" name="description" type="text">
 
   <button type="submit">Add task</button>
 </form>
