--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,13 @@
 <h1>To Do</h1>
 
+<p>Here are all your tasks:</p>
+
+<ul>
+  <% @tasks.not_done().each do |task| %>
+    <li><%= task.description %></li>
+  <% end %>
+</ul>
+
 <p>Create a new list:</p>
 
 <form action="/lists" method="post">
